# mock_exercise

./: README.md  pyproject.toml
src/mock_exercise/: mock_calculator.py
